--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -154,3 +154,24 @@
     top: -25px;
   }
 }
+
+.head-text1 {
+    font-size: 2.75rem;
+    font-weight: 800;
+    text-align: center;
+    color: white;
+    text-transform: capitalize;
+    
+
+    span {
+        color: #6973e9;
+    }
+
+    @media screen and (min-width: 2000px) {
+        font-size: 4rem;
+    }
+
+    @media screen and (max-width: 450px) {
+        font-size: 2rem;
+    }
+}
