--- a/frontend_react/src/container/Testimonials/Testimonial.scss
+++ b/frontend_react/src/container/Testimonials/Testimonial.scss
@@ -5,17 +5,16 @@
 }
 
 .app__testimonial-item {
-  width: 60%;
-  min-height: 320px;
+  width: 75%;
+  min-height: 250px;
   background-color: var(--white-color);
   display: flex;
   flex-direction: row;
   padding: 2rem;
   border-radius: 15px;
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
-
+  box-shadow: 0px 0px 20px rgba(235, 35, 201, 0.685);
   transition: all 0.3s ease-in-out;
-
+  margin-top: 7.5rem;
   img {
     width: 100px;
     height: 100px;
@@ -91,7 +90,7 @@
     height: 50px;
     border-radius: 50%;
     background-color: var(--white-color);
-
+box-shadow: 0px 0px 20px rgba(235, 35, 201, 0.685);
     margin: 1rem;
     transition: all 0.3s ease-in-out;
 
