--- a/frontend_react/src/container/Footer/Footer.scss
+++ b/frontend_react/src/container/Footer/Footer.scss
@@ -8,6 +8,26 @@
   }
 }
 
+.head-text1 {
+  font-size: 2.75rem;
+  font-weight: 800;
+  text-align: center;
+  color: white;
+  text-transform: capitalize;
+
+  span {
+    color: #6973e9;
+  }
+
+  @media screen and (min-width: 2000px) {
+    font-size: 4rem;
+  }
+
+  @media screen and (max-width: 450px) {
+    font-size: 2rem;
+  }
+}
+
 .app__footer-cards {
   width: 60%;
   display: flex;
@@ -15,14 +35,13 @@
   align-items: center;
   flex-wrap: wrap;
   margin: 4em 2rem 2rem;
-
   .app__footer-card {
     min-width: 290px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-
+    box-shadow: 0px 0px 20px rgba(235, 35, 201, 0.685);
     margin: 1rem 0;
     padding: 1rem;
     border-radius: 10px;
@@ -70,15 +89,12 @@
   width: 60%;
   flex-direction: column;
   margin: 1rem 2rem;
-
+  // background-color: #2430af;
   div {
     width: 100%;
-
     margin: 0.75rem 0;
     border-radius: 10px;
     cursor: pointer;
-    background-color: var(--primary-color);
-
     transition: all 0.3s ease-in-out;
 
     input,
@@ -88,18 +104,18 @@
       border: none;
       border-radius: 7px;
       background-color: var(--primary-color);
-
       font-family: var(--font-base);
-      color: var(--secondary-color);
+      color: white;
       outline: none;
     }
 
     textarea {
       height: 170px;
+      resize: none;
     }
 
     &:hover {
-      box-shadow: 0 0 25px var(--primary-color);
+      box-shadow: 0px 0px 20px rgba(235, 35, 201, 0.685);
     }
   }
 
@@ -119,7 +135,7 @@
     cursor: pointer;
 
     &:hover {
-      background-color: #2430af;
+      box-shadow: 0px 0px 20px rgba(235, 35, 201, 0.685);
     }
   }
 
