--- a/frontend_react/src/container/Skills/Skills.scss
+++ b/frontend_react/src/container/Skills/Skills.scss
@@ -36,7 +36,6 @@
 .app__skills-item {
   flex-direction: column;
   text-align: center;
-
   margin: 1rem;
 
   transition: all 0.3s ease-in-out;
@@ -46,7 +45,7 @@
     height: 90px;
     border-radius: 50%;
     background-color: #fef4f5;
-
+    box-shadow: 0px 0px 20px rgba(235, 35, 201, 0.685);
     img {
       width: 50%;
       height: 50%;
@@ -102,6 +101,21 @@
   margin: 1rem 0;
 }
 
+.bold-text1 {
+    font-size: 1rem;
+    font-weight: 800;
+    color: white;
+    text-align: left;
+
+    @media screen and (min-width: 2000px) {
+        font-size: 2rem;
+    }
+
+    @media screen and (max-width: 450px) {
+        font-size: 0.9rem;
+    }
+}
+
 .app__skills-exp-works {
   flex: 1;
 
@@ -126,24 +140,23 @@
 }
 
 .head-text1 {
-    font-size: 2.75rem;
-    font-weight: 800;
-    text-align: center;
-    color: white;
-    text-transform: capitalize;
-    
+  font-size: 2.75rem;
+  font-weight: 800;
+  text-align: center;
+  color: white;
+  text-transform: capitalize;
 
-    span {
-        color: #6973e9;
-    }
+  span {
+    color: #6973e9;
+  }
 
-    @media screen and (min-width: 2000px) {
-        font-size: 4rem;
-    }
+  @media screen and (min-width: 2000px) {
+    font-size: 4rem;
+  }
 
-    @media screen and (max-width: 450px) {
-        font-size: 2rem;
-    }
+  @media screen and (max-width: 450px) {
+    font-size: 2rem;
+  }
 }
 
 .app__skills-exp-year {
@@ -151,7 +164,7 @@
 
   p {
     font-weight: 800;
-    color: var(--secondary-color);
+    color: #6973e9;
   }
 
   @media screen and (max-width: 450px) {
