--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -27,6 +27,7 @@
     &:hover {
       background-color: var(--secondary-color);
       color: #fff;
+      box-shadow: 0px 0px 20px rgba(235, 35, 201, 0.685);
     }
 
     @media screen and (min-width: 2000px) {
@@ -46,11 +47,11 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-
+  
   .app__work-item {
     width: 270px;
     flex-direction: column;
-
+    box-shadow: 0px 0px 20px rgba(235, 35, 201, 0.685);
     margin: 2rem;
     padding: 1rem;
     border-radius: 0.5rem;
