--- a/frontend_react/src/container/About/About.scss
+++ b/frontend_react/src/container/About/About.scss
@@ -114,26 +114,49 @@
 
 .app__profile-item {
   width: 200px;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // height: 200px;
   flex-direction: column;
   margin: 2rem;
 
   img {
-    width: 100%;
-    height: 200px;
+    width: 230px;
+    height: 230px;
     border-radius: 15px;
     object-fit: cover;
   }
 
   @media screen and (min-width: 2000px) {
-    width: 370px;
+    width: 300px;
+    height: 400px;
     margin: 2rem 4rem;
+    font-size: 1rem;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    // height: 200px;
 
     img {
       height: 320px;
     }
   }
+
+  // @media screen and (min-width: 800px) {
+  //   width: 300px;
+  //   height: 400px;
+  //   margin: 2rem 4rem;
+  //   font-size: 1rem;
+  //   font-weight: 300;
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   flex-direction: column;
+  //   // height: 200px;
+
+  //   img {
+  //     // height: 320px;
+  //     height: auto;
+  //   }
+  // }
 }
