--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -49,7 +49,8 @@
   align-items: center;
   
   .app__work-item {
-    width: 270px;
+    width: 370px;
+    height: 370px;
     flex-direction: column;
     box-shadow: 0px 0px 20px rgba(235, 35, 201, 0.685);
     margin: 2rem;
@@ -57,6 +58,9 @@
     border-radius: 0.5rem;
     background-color: #fff;
     color: #000;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
 
     cursor: pointer;
     transition: all 0.3s ease;
