--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -215,7 +215,6 @@
 .app__header-img {
   flex: 1;
   height: 100%;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -226,7 +225,7 @@
     width: 80%;
     height: 80%;
     object-fit: contain;
-    z-index: 10;
+    // z-index: 10;
   }
 
   .overlay_circle {
@@ -234,7 +233,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 0;
+    z-index: -10;
     width: 100%;
     height: 90%;
   }
