--- a/frontend_react/src/container/About/About.scss
+++ b/frontend_react/src/container/About/About.scss
@@ -106,7 +106,7 @@
 
 .app__profiles {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
   margin-top: 2rem;
@@ -126,8 +126,8 @@
   }
 
   @media screen and (min-width: 2000px) {
-    width: 300px;
-    height: 400px;
+    width: 30px;
+    height: 40px;
     margin: 2rem 4rem;
     font-size: 1rem;
     font-weight: 300;
