--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -7,7 +7,7 @@
 
   padding: 1rem 2rem;
   // background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   // border: 1px solid rgba(255, 255, 255, 0.18);
@@ -21,8 +21,8 @@
   align-items: center;
 
   img {
-    width: 80px;
-    height: 45px;
+    width: 90px;
+    height: 50px;
 
     @media screen and (min-width: 2000px) {
       width: 180px;
@@ -30,24 +30,6 @@
     }
   }
 }
-
-
-// .app__navbar-logo1 {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   font-size: 3rem;
-//   color: white;
-//   // width: 10px;
-//   // height: 20px;
-//   transform: rotateY(180deg);
-
-//   @media screen and (min-width: 500px) {
-//     width: 90px;
-//     height: 40px;
-//     margin: auto;
-//   }
-// }
 
 .app__navbar-links {
   flex: 1;
@@ -76,7 +58,7 @@
       color: white;
       text-decoration: none;
       flex-direction: column;
-      font-size: 1.1rem;
+
       text-transform: uppercase;
       font-weight: 500;
 
@@ -126,7 +108,7 @@
 
     padding: 1rem;
 
-    width: 80%;
+    width: 50%;
     height: 100vh;
     
     display: flex;
@@ -134,8 +116,8 @@
     align-items: flex-end;
     flex-direction: column;
     
-    // background: url('../../assets/bgWhite.png');
-    background-color: var(--white-color);
+    background: url('../../assets/bgWhite.png');
+    background-color: rgba(71, 71, 71, 0.747);;
     background-size: cover;
     background-repeat: repeat;
 
@@ -158,14 +140,14 @@
 
       display: flex;
       justify-content: flex-start;
-      align-items: flex-start;
+      align-items: center;
       flex-direction: column;
 
       li {
         margin: 1rem;
 
         a {
-          color: var(--gray-color);
+          color: white;
           text-decoration: none;
           font-size: 1rem;
           text-transform: uppercase;
